--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -7,6 +7,7 @@
     <script src="https://kit.fontawesome.com/3749409e13.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" 
     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
     <title>FriendFinder Survey</title>
 </head>
 <body>
@@ -196,3 +197,8 @@
             </div>
         </footer>
     </div>
+    <script>
+        $(".dropdown-toggle").dropdown()
+    </script>
+</body>
+</html>
